swagger update fixed API
