# routes/swagger.json
@@ -190,13 +190,16 @@
         ],
         "responses": {
           "200": {
-            "description": "successful operation"
+            "description": "successful operation",
+            "schema": {
+              "$ref": "#/definitions/employeesresponse"
+            }
           },
           "400": {
             "description": "Invalid ID supplied"
           },
           "404": {
-            "description": "Pet not found"
+            "description": "employee not found"
           }
         },
         "security": [
@@ -524,6 +527,12 @@
         "name": {
           "type": "string"
         }
+      }
+    },
+    "employeesresponse": {
+      "type": "array",
+      "items": {
+        "$ref": "#/definitions/employees"
       }
     },
     "departments": {
